--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>DreamEcho</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Tone.js para sintetizar sonido y convertir número MIDI a nota -->
+  <!-- Necesario para convertir número MIDI a nombre de nota -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.39/Tone.min.js"></script>
   <style>
     body {
@@ -14,6 +14,8 @@
       background-color: #c1f7f2;
       margin: 0;
       min-height: 100vh;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
     .marco {
       width: 90%;
@@ -36,12 +38,12 @@
       background: #2196f3; color: #fff;
     }
     #mainContent { display: none; }
-    #status, #recuentoOyentes {
+    #recuentoOyentes, #status {
       font-size: 1.1em; color: #555; margin: .5em 0;
     }
     .video-container {
       display: flex; gap: 1em; justify-content: center;
-      margin: 1em 0;
+      flex-wrap: nowrap; margin: 1em 0;
     }
     .video-block {
       flex: 1 1 45%; display: flex;
@@ -55,7 +57,7 @@
       margin-top: .3em; font-weight: bold; color: #333;
     }
     #talkBtn {
-      padding: .8em 2em; font-size: 1.1em; margin: 1em 0;
+      padding: .8em 2em; font-size: 1.1em; margin: 1em 0; margin-top: -30px;
       border: none; border-radius: .7em;
       background: #2196f3; color: white;
       cursor: pointer; user-select: none;
@@ -64,11 +66,30 @@
       transform: scale(.96); background: red;
     }
     .midi-section {
-      margin: 1.5em 0;
+      margin: 1.5em 0; text-align: center;
+    }
+    .midi-section h3 {
+      margin-bottom: .5em; font-size: 1em;
+    }
+    .midi-controls {
+      display: flex; justify-content: center;
+      align-items: center; gap: 1em; margin-bottom: .5em;
+    }
+    .midi-controls select {
+      padding: .4em; font-size: 1em;
+      /* ancho flexible, se fija en JS */
+      width: auto;
+    }
+    #midiStatus, #midiSendStatus {
+      margin-top: .5em; color: #555;
     }
     #keyboard {
       width: 100%; max-width: 700px;
-      height: 150px; margin: 1em auto;
+      height: 150px; margin: 1.5em auto; margin-bottom: -10px;
+    }
+    .midi-section select {
+      padding: .4em;
+      font-size: 0.8em;
     }
   </style>
 </head>
@@ -100,8 +121,19 @@
       <button id="talkBtn">📢 Mantén pulsado para hablar</button>
 
       <div class="midi-section">
-        <h3>MIDI recibido (del otro participante)</h3>
-        <p id="midiStatus">Reenviando al piano para LED...</p>
+        <h3>MIDI recibido (del otro participante):</h3>
+        <div class="midi-controls">
+          <select id="midiOutSelect" multiple>
+            <!-- opciones dinámicas -->
+          </select>
+        </div>
+        <div id="midiStatus"></div>
+      </div>
+
+      <div class="midi-section">
+        <h3>MIDI a enviar (tu piano):</h3>
+        <div id="midiInSelectCont"></div>
+        <div id="midiSendStatus"></div>
       </div>
 
       <p id="recuentoOyentes">Oyentes conectados: --</p>
@@ -115,10 +147,11 @@
   </script>
 
   <script>
-    let pin, ws, pc, piano, synth;
+    let pin, ws, pc, piano;
     let realAudioTrack, silentAudioTrack, audioSender;
     let pressingTalk = false, remoteSpeaking = false;
-    let midiAccess, midiOutputs = [], midiChannel;
+    let midiAccess, midiInputs = [], midiOutputs = [];
+    let selectedMidiOuts = [], midiInDevice, midiChannel;
 
     const pinSection    = document.getElementById('pinSection');
     const pinInput      = document.getElementById('pinInput');
@@ -129,15 +162,17 @@
     const localVideo    = document.getElementById('localVideo');
     const remoteVideo   = document.getElementById('remoteVideo');
     const talkBtn       = document.getElementById('talkBtn');
-    const keyboardEl    = document.getElementById('keyboard');
+    const midiOutSelect = document.getElementById('midiOutSelect');
     const midiStatus    = document.getElementById('midiStatus');
+    const midiInSelectCont = document.getElementById('midiInSelectCont');
+    const midiSendStatus   = document.getElementById('midiSendStatus');
+    const keyboardEl    = document.getElementById('keyboard');
 
     pinBtn.addEventListener('click', () => {
       pin = pinInput.value.trim();
       if (!pin) return;
       pinSection.style.display = 'none';
       mainContent.style.display = 'block';
-
       piano = new PianoKeys.Keyboard(keyboardEl, {
         width: keyboardEl.clientWidth,
         height: keyboardEl.clientHeight,
@@ -145,8 +180,6 @@
         accidentalKeyColour: '#000',
         activeColour: '#4a4'
       });
-      synth = new Tone.Synth().toDestination();
-
       connectWebSocket();
     });
 
@@ -188,7 +221,7 @@
         await pc.setRemoteDescription(new RTCSessionDescription(msg.offer));
         const answer = await pc.createAnswer();
         await pc.setLocalDescription(answer);
-        sendMessage({ type: 'signal', answer: pc.localDescription });
+        sendMessage({ type:'signal', answer: pc.localDescription });
       } else if (msg.answer && pc) {
         await pc.setRemoteDescription(new RTCSessionDescription(msg.answer));
       } else if (msg.candidate && pc) {
@@ -200,7 +233,7 @@
       await setupOfferer();
       const offer = await pc.createOffer();
       await pc.setLocalDescription(offer);
-      sendMessage({ type: 'signal', offer: pc.localDescription });
+      sendMessage({ type:'signal', offer: pc.localDescription });
     }
 
     async function setupOfferer() {
@@ -219,10 +252,17 @@
 
     function createPeerConnection() {
       const connection = new RTCPeerConnection({
-        iceServers: [{ urls: 'stun:stun.l.google.com:19302' }]
+        iceServers: [
+          { urls: 'stun:stun.l.google.com:19302' },
+          {
+            urls: 'turn:TU_TURN_SERVER:3478',
+            username: 'TU_USUARIO',
+            credential: 'TU_CONTRASEÑA'
+          }
+        ]
       });
       connection.onicecandidate = ({ candidate }) => {
-        if (candidate) sendMessage({ type: 'signal', candidate });
+        if (candidate) sendMessage({ type:'signal', candidate });
       };
       connection.ontrack = ev => {
         remoteVideo.srcObject = ev.streams[0];
@@ -237,18 +277,18 @@
     }
 
     function createSilentAudioTrack() {
-      const ctx = new (window.AudioContext || window.webkitAudioContext)();
+      const ctx = new (window.AudioContext||window.webkitAudioContext)();
       const osc = ctx.createOscillator();
       osc.frequency.value = 0;
       const dst = ctx.createMediaStreamDestination();
       osc.connect(dst);
       osc.start();
-      setTimeout(() => osc.stop(), 100);
+      setTimeout(()=>osc.stop(),100);
       return dst.stream.getAudioTracks()[0];
     }
 
     async function initLocalVideo() {
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+      const stream = await navigator.mediaDevices.getUserMedia({ video:true,audio:true });
       realAudioTrack = stream.getAudioTracks()[0];
       silentAudioTrack = createSilentAudioTrack();
       localVideo.srcObject = stream;
@@ -261,53 +301,104 @@
 
     function updateMicState() {
       if (!audioSender) return;
-      const track = (pressingTalk && !remoteSpeaking) ? realAudioTrack : silentAudioTrack;
+      const track = (pressingTalk && !remoteSpeaking)
+                    ? realAudioTrack
+                    : silentAudioTrack;
       if (audioSender.track !== track) audioSender.replaceTrack(track);
     }
 
-    talkBtn.addEventListener('mousedown', () => {
+    ['mousedown','touchstart'].forEach(e => talkBtn.addEventListener(e, ()=> {
       pressingTalk = true;
-      sendMessage({ type: 'talk', speaking: true });
+      sendMessage({ type:'talk', speaking:true });
       talkBtn.style.background = 'red';
       updateMicState();
-    });
-    talkBtn.addEventListener('mouseup', () => {
+    }));
+    ['mouseup','mouseleave','touchend','touchcancel'].forEach(e => talkBtn.addEventListener(e, ()=> {
       pressingTalk = false;
-      sendMessage({ type: 'talk', speaking: false });
+      sendMessage({ type:'talk', speaking:false });
       talkBtn.style.background = '';
       updateMicState();
-    });
-    talkBtn.addEventListener('mouseleave', () => {
-      pressingTalk = false;
-      sendMessage({ type: 'talk', speaking: false });
-      talkBtn.style.background = '';
-      updateMicState();
-    });
+    }));
 
     async function setupMIDI() {
-      midiAccess = await navigator.requestMIDIAccess();
+      midiAccess  = await navigator.requestMIDIAccess();
+      midiInputs  = Array.from(midiAccess.inputs.values());
       midiOutputs = Array.from(midiAccess.outputs.values());
-      // Si hay puertos USB-MIDI conectados (piano), estarán en midiOutputs
-      // No hace falta selector: reenviamos todo al piano
+
+      // Salidas MIDI (múltiple)
+      midiOutSelect.innerHTML = '';
+      if (midiOutputs.length) {
+        midiOutputs.forEach((o,i) => {
+          const opt = document.createElement('option');
+          opt.value = i;
+          opt.textContent = o.name;
+          midiOutSelect.appendChild(opt);
+        });
+        midiOutSelect.size = Math.min(midiOutputs.length, 4);
+        midiOutSelect.onchange = () => {
+          selectedMidiOuts = Array.from(midiOutSelect.selectedOptions)
+                                .map(o => midiOutputs[+o.value]);
+          midiStatus.textContent = selectedMidiOuts.length
+            ? `MIDI OUT: ${selectedMidiOuts.map(d=>d.name).join(', ')}`
+            : '';
+        };
+        // Si solo hay una salida, sélectionalo automáticamente
+        if (midiOutputs.length === 1) {
+          midiOutSelect.options[0].selected = true;
+          midiOutSelect.onchange();
+        }
+      } else {
+        midiOutSelect.innerHTML = '<option>(No hay salidas MIDI)</option>';
+        midiOutSelect.size = 1;
+      }
+
+      // Entradas MIDI (única selección)
+      midiInSelectCont.innerHTML = '';
+      if (midiInputs.length) {
+        const selIn = document.createElement('select');
+        selIn.innerHTML = '<option value="">-- Elige entrada MIDI --</option>';
+        midiInputs.forEach((i,k) => {
+          selIn.innerHTML += `<option value="${k}">${i.name}</option>`;
+        });
+        selIn.onchange = () => {
+          if (midiInDevice) midiInDevice.onmidimessage = null;
+          midiInDevice = selIn.value !== '' ? midiInputs[+selIn.value] : null;
+          if (midiInDevice) {
+            midiInDevice.onmidimessage = ({ data }) => {
+              if (midiChannel && midiChannel.readyState === 'open') {
+                midiChannel.send(JSON.stringify({ data: Array.from(data) }));
+              }
+            };
+            midiSendStatus.textContent = `Enviando MIDI desde: ${midiInDevice.name}`;
+          } else {
+            midiSendStatus.textContent = '';
+          }
+        };
+        midiInSelectCont.appendChild(selIn);
+        // Si solo hay una entrada, selección automática
+        if (midiInputs.length === 1) {
+          selIn.value = '0';
+          selIn.onchange();
+        }
+      } else {
+        midiInSelectCont.textContent = '(No hay entradas MIDI físicas conectadas)';
+      }
     }
 
     function handleMidiMessage(msg) {
-      const [status, note, velocity] = msg.data;
+      const [status, note, vel] = msg.data;
       const cmd = status & 0xf0;
       const noteName = Tone.Frequency(note, 'midi').toNote();
 
-      // 1) Sintetizar sonido local
-      synth.triggerAttackRelease(noteName, '8n');
-
-      // 2) Iluminar teclado en pantalla
-      if (cmd === 0x90 && velocity > 0) {
+      // iluminar teclado
+      if (cmd === 0x90 && vel > 0) {
         piano.fillKey(noteName);
-      } else if (cmd === 0x80 || (cmd === 0x90 && velocity === 0)) {
+      } else if (cmd === 0x80 || (cmd === 0x90 && vel === 0)) {
         piano.clearKey(noteName);
       }
 
-      // 3) Reenviar a TODOS los puertos MIDI de salida locales (tu piano USB)
-      midiOutputs.forEach(dev => {
+      // reenviar a salidas seleccionadas
+      selectedMidiOuts.forEach(dev => {
         dev.send(new Uint8Array(msg.data));
       });
     }
