--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
 
       <div id="keyboard"></div>
-      <button id="talkBtn">📢 Hablar</button>
+      <button id="talkBtn">🔊 Hablar</button>
 
       <div class="midi-section">
         <h3>MIDI recibido (del otro participante):</h3>
